[package]
name = "enet-sys"
version = "1.0.4"
authors = ["Roland Ruckerbauer <roland.rucky@gmail.com>"]
description = "Low level bindings to the enet C library"
license = "MIT"
repository = "https://github.com/ruabmbua/enet-sys"
links = "enet"
build = "build.rs"

[build-dependencies]
bindgen = { version = "0.71.1", default-features = false, features = [ "runtime" ] }
cmake = { version = "0.1.52", default-features = false }
